<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hanu Sync</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_button">Get title</string>
    <string name="login">Login</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="info">Information</string>
    <string name="intro_message">Here you can quickly review the status of your submissions. Please note that the app will assume that you
    have completed a submission if it finds a submitted file.</string>
    <string name="no_submission">No pending submission</string>
    <string name="no_internet">No internet connection</string>
    <string name="retry">Retry</string>
    <string name="title_activity_exception">Error</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_thread">ThreadActivity</string>
    <string name="grade">Grade</string>
    <string name="grade_item">Grade item</string>
    <string name="grades">Grade</string>
    <string name="percentage">Pct</string>
    <string name="title_activity_about">About</string>
    <string name="about_me">About Me</string>
    <string name="about_open">Open Source Licenses</string>
    <string name="version">Application Version</string>
    <string name="title_activity_me">About Me</string>
    <string name="facebook">My Facebook</string>
    <string name="fb_url">facebook.com/zenith.wyrm</string>
    <string name="twitter">My Twitter</string>
    <string name="tw_url">twitter.com/wyrmise</string>
    <string name="github">My Github</string>
    <string name="github_pull">Feel free to send me any pull request!</string>
    <string name="title_activity_license">Open Source Licenses</string>
    <string name="android_open_source">Android Open Source Project</string>
    <string name="jsoup">jsoup: HTML Parser</string>
    <string name="float_label">Float Labeled EditText</string>
    <string name="swipe_back">SwipeBack</string>
    <string name="apache_license">Apache License 2.0</string>
    <string name="mit_license">MIT License</string>
    <string name="restart">Restart</string>
    <string name="quit">Get me out of here</string>
    <string name="save_login">Save login details</string>
    <string name="save_login_summary">Save your next login credentials</string>
    <string name="auto_login">Auto login</string>
    <string name="auto_login_summary">Log you in automatically using your saved id and password</string>
    <string name="ui">UI</string>
    <string name="enable_swipe_back">Enable swipe left to go back</string>
    <string name="swipe_back_summary">Available in some certain screen</string>
</resources>
