<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/grade_item" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:singleLine="true"
            android:text="@string/grades" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:singleLine="true"
            android:text="@string/percentage" />
    </LinearLayout>

    <ListView
        android:id="@+id/gradeListView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"></ListView>
</LinearLayout>
