<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_default"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="io.wyrmise.hanusync.MeActivity">

    <RelativeLayout
        android:id="@+id/hanusync"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true">

        <TextView
            android:id="@+id/sync_name"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="9dp"
            android:text="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sync_name"
            android:layout_marginStart="10dp"
            android:text="@string/apache_license" />
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/hanusync"
        android:background="@drawable/divider" />

    <RelativeLayout
        android:id="@+id/android_open"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/divider"
        android:clickable="true">

        <TextView
            android:id="@+id/android_open_source"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="9dp"
            android:text="@string/android_open_source" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/android_open_source"
            android:layout_marginStart="10dp"
            android:text="@string/apache_license" />
    </RelativeLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/android_open"
        android:background="@drawable/divider" />

    <RelativeLayout
        android:id="@+id/jsoup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/divider2"
        android:clickable="true">

        <TextView
            android:id="@+id/jsoup_name"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="9dp"
            android:text="@string/jsoup" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/jsoup_name"
            android:layout_marginStart="10dp"
            android:text="@string/mit_license" />
    </RelativeLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/jsoup"
        android:background="@drawable/divider" />

    <RelativeLayout
        android:id="@+id/float_label"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/divider3"
        android:clickable="true">

        <TextView
            android:id="@+id/float_name"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="9dp"
            android:text="@string/float_label" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/float_name"
            android:layout_marginStart="10dp"
            android:text="@string/apache_license" />
    </RelativeLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/float_label"
        android:background="@drawable/divider" />

    <RelativeLayout
        android:id="@+id/swipe_back"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/divider4"
        android:clickable="true">

        <TextView
            android:id="@+id/swipe_back_name"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="9dp"
            android:text="@string/swipe_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/swipe_back_name"
            android:layout_marginStart="10dp"
            android:text="@string/apache_license" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/swipe_back"
        android:background="@drawable/divider" />

</RelativeLayout>
